// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dataset Properties Panel Edit existing dataset 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="panel panel-default domain-form-panel lk-border-theme-light"
      >
        <div
          class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
          id="dataset-header-id"
        >
          <span
            class="domain-panel-status-icon"
          >
            <span
              class="fa fa-check-circle"
            />
          </span>
          <span
            class="domain-panel-title"
          >
            Dataset1 - Dataset Properties
          </span>
          <span
            class="pull-right"
          >
            <span
              class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
            />
          </span>
        </div>
        <div
          class="collapse panel-collapse in"
        >
          <div
            class="panel-body"
          >
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-12"
              >
                <div
                  class="row"
                >
                  <div
                    class="col-xs-12"
                  >
                    <a
                      class="domain-field-float-right"
                      href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataset"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Learn more about designing datasets
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-xs-12 col-md-5"
              >
                <div
                  class="domain-field-section-heading"
                >
                  Basic Properties
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-4"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Name
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                       *
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <input
                      class="form-control"
                      id="name"
                      placeholder="Enter a name for this dataset"
                      type="text"
                      value="Dataset1"
                    />
                  </div>
                  <div
                    class="col-xs-1"
                  />
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-4"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Label
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                       *
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <input
                      class="form-control"
                      id="label"
                      type="text"
                      value="Dataset One"
                    />
                  </div>
                  <div
                    class="col-xs-1"
                  />
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-4"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Description
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <textarea
                      class="form-control"
                      id="description"
                    >
                      This is the first dataset
                    </textarea>
                  </div>
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-4"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Category
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <div
                      class="select-input-container "
                    >
                      <div
                        class=""
                      >
                        <div
                          class="select-input css-b62m3t-container"
                          id="selectinput-10"
                        >
                          <span
                            class="css-1f43avz-a11yText-A11yText"
                            id="react-select-4-live-region"
                          />
                          <span
                            aria-atomic="false"
                            aria-live="polite"
                            aria-relevant="additions text"
                            class="css-1f43avz-a11yText-A11yText"
                            role="log"
                          />
                          <div
                            class="select-input__control css-13cymwt-control"
                          >
                            <div
                              class="select-input__value-container select-input__value-container--has-value css-hlgwow"
                            >
                              <div
                                class="select-input__single-value css-1dimb5e-singleValue"
                              >
                                A
                              </div>
                              <div
                                class="select-input__input-container css-19bb58m"
                                data-value=""
                              >
                                <input
                                  aria-activedescendant=""
                                  aria-autocomplete="list"
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  autocapitalize="none"
                                  autocomplete="off"
                                  autocorrect="off"
                                  class="select-input__input"
                                  id="react-select-4-input"
                                  role="combobox"
                                  spellcheck="false"
                                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                  tabindex="0"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                            <div
                              class="select-input__indicators css-1wy0on6"
                            >
                              <div
                                aria-hidden="true"
                                class="select-input__indicator select-input__clear-indicator css-1xc3v61-indicatorContainer"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="css-tj5bde-Svg"
                                  focusable="false"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                >
                                  <path
                                    d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                                  />
                                </svg>
                              </div>
                              <span
                                class="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                              />
                              <div
                                aria-hidden="true"
                                class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="css-tj5bde-Svg"
                                  focusable="false"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                >
                                  <path
                                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                          <input
                            name="category"
                            type="hidden"
                            value="A"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="col-xs-1"
                  />
                </div>
              </div>
              <div
                class="col-xs-12 col-md-5"
              >
                <div
                  class="domain-field-section-heading"
                >
                  Data Row Uniqueness
                  <div
                    class="overlay-trigger"
                  >
                    <span
                      class="label-help-target"
                    >
                      <span
                        class="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="dataset_data_row_uniqueness_container"
                >
                  <div
                    class="radio"
                  >
                    <label>
                      <input
                        name="dataRowSetting"
                        type="radio"
                        value="0"
                      />
                      Participants
                       only (demographic data)
                    </label>
                  </div>
                  <div
                    class="radio"
                  >
                    <label>
                      <input
                        name="dataRowSetting"
                        type="radio"
                        value="1"
                      />
                      Participants
                       and 
                      visits
                    </label>
                  </div>
                  <div
                    class="radio"
                  >
                    <label>
                      <input
                        checked=""
                        name="dataRowSetting"
                        type="radio"
                        value="2"
                      />
                      Participants
                      , 
                      visits
                      , and additional key field
                    </label>
                  </div>
                </div>
                <div
                  class="dataset_data_row_element_show"
                >
                  <div
                    class="row margin-top"
                  >
                    <div
                      class="col-xs-5"
                    >
                      Additional Key 
                      <span
                        class="domain-no-wrap"
                      >
                        Field
                        <div
                          class="overlay-trigger"
                        >
                          <span
                            class="label-help-target"
                          >
                            <span
                              class="label-help-icon fa fa-question-circle"
                            />
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="col-xs-7"
                    >
                      <div
                        class="select-input-container "
                      >
                        <div
                          class=""
                        >
                          <div
                            class="select-input css-b62m3t-container"
                            id="selectinput-13"
                          >
                            <span
                              class="css-1f43avz-a11yText-A11yText"
                              id="react-select-5-live-region"
                            />
                            <span
                              aria-atomic="false"
                              aria-live="polite"
                              aria-relevant="additions text"
                              class="css-1f43avz-a11yText-A11yText"
                              role="log"
                            />
                            <div
                              class="select-input__control css-13cymwt-control"
                            >
                              <div
                                class="select-input__value-container select-input__value-container--has-value css-hlgwow"
                              >
                                <div
                                  class="select-input__single-value css-1dimb5e-singleValue"
                                >
                                  Name
                                </div>
                                <div
                                  class="select-input__input-container css-19bb58m"
                                  data-value=""
                                >
                                  <input
                                    aria-activedescendant=""
                                    aria-autocomplete="list"
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    autocapitalize="none"
                                    autocomplete="off"
                                    autocorrect="off"
                                    class="select-input__input"
                                    id="react-select-5-input"
                                    role="combobox"
                                    spellcheck="false"
                                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                    tabindex="0"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                              <div
                                class="select-input__indicators css-1wy0on6"
                              >
                                <span
                                  class="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                                />
                                <div
                                  aria-hidden="true"
                                  class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="css-tj5bde-Svg"
                                    focusable="false"
                                    height="20"
                                    viewBox="0 0 20 20"
                                    width="20"
                                  >
                                    <path
                                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                    />
                                  </svg>
                                </div>
                              </div>
                            </div>
                            <input
                              name="keyPropertyName"
                              type="hidden"
                              value="Name"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="dataset_data_row_element_show"
                >
                  <div
                    class="checkbox"
                  >
                    <label>
                      <input
                        id="keyPropertyManaged"
                        type="checkbox"
                      />
                      Let server manage fields to make entries unique
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="col-xs-12 col-md-2"
              >
                <button
                  class="domain-field-float-right btn btn-default"
                  type="button"
                >
                  Advanced Settings
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip7"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip8"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip9"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip11"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip12"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="panel panel-default domain-form-panel lk-border-theme-light"
    >
      <div
        class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
        id="dataset-header-id"
      >
        <span
          class="domain-panel-status-icon"
        >
          <span
            class="fa fa-check-circle"
          />
        </span>
        <span
          class="domain-panel-title"
        >
          Dataset1 - Dataset Properties
        </span>
        <span
          class="pull-right"
        >
          <span
            class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
          />
        </span>
      </div>
      <div
        class="collapse panel-collapse in"
      >
        <div
          class="panel-body"
        >
          <div
            class="row margin-bottom"
          >
            <div
              class="col-xs-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-xs-12"
                >
                  <a
                    class="domain-field-float-right"
                    href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataset"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about designing datasets
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-xs-12 col-md-5"
            >
              <div
                class="domain-field-section-heading"
              >
                Basic Properties
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-4"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Name
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                     *
                  </span>
                </div>
                <div
                  class="col-xs-7"
                >
                  <input
                    class="form-control"
                    id="name"
                    placeholder="Enter a name for this dataset"
                    type="text"
                    value="Dataset1"
                  />
                </div>
                <div
                  class="col-xs-1"
                />
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-4"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Label
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                     *
                  </span>
                </div>
                <div
                  class="col-xs-7"
                >
                  <input
                    class="form-control"
                    id="label"
                    type="text"
                    value="Dataset One"
                  />
                </div>
                <div
                  class="col-xs-1"
                />
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-4"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Description
                  </span>
                </div>
                <div
                  class="col-xs-7"
                >
                  <textarea
                    class="form-control"
                    id="description"
                  >
                    This is the first dataset
                  </textarea>
                </div>
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-4"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Category
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </span>
                </div>
                <div
                  class="col-xs-7"
                >
                  <div
                    class="select-input-container "
                  >
                    <div
                      class=""
                    >
                      <div
                        class="select-input css-b62m3t-container"
                        id="selectinput-10"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-4-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                          role="log"
                        />
                        <div
                          class="select-input__control css-13cymwt-control"
                        >
                          <div
                            class="select-input__value-container select-input__value-container--has-value css-hlgwow"
                          >
                            <div
                              class="select-input__single-value css-1dimb5e-singleValue"
                            >
                              A
                            </div>
                            <div
                              class="select-input__input-container css-19bb58m"
                              data-value=""
                            >
                              <input
                                aria-activedescendant=""
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-haspopup="true"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="select-input__input"
                                id="react-select-4-input"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="select-input__indicators css-1wy0on6"
                          >
                            <div
                              aria-hidden="true"
                              class="select-input__indicator select-input__clear-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                                />
                              </svg>
                            </div>
                            <span
                              class="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="category"
                          type="hidden"
                          value="A"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="col-xs-1"
                />
              </div>
            </div>
            <div
              class="col-xs-12 col-md-5"
            >
              <div
                class="domain-field-section-heading"
              >
                Data Row Uniqueness
                <div
                  class="overlay-trigger"
                >
                  <span
                    class="label-help-target"
                  >
                    <span
                      class="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
              </div>
              <div
                class="dataset_data_row_uniqueness_container"
              >
                <div
                  class="radio"
                >
                  <label>
                    <input
                      name="dataRowSetting"
                      type="radio"
                      value="0"
                    />
                    Participants
                     only (demographic data)
                  </label>
                </div>
                <div
                  class="radio"
                >
                  <label>
                    <input
                      name="dataRowSetting"
                      type="radio"
                      value="1"
                    />
                    Participants
                     and 
                    visits
                  </label>
                </div>
                <div
                  class="radio"
                >
                  <label>
                    <input
                      checked=""
                      name="dataRowSetting"
                      type="radio"
                      value="2"
                    />
                    Participants
                    , 
                    visits
                    , and additional key field
                  </label>
                </div>
              </div>
              <div
                class="dataset_data_row_element_show"
              >
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-5"
                  >
                    Additional Key 
                    <span
                      class="domain-no-wrap"
                    >
                      Field
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <div
                      class="select-input-container "
                    >
                      <div
                        class=""
                      >
                        <div
                          class="select-input css-b62m3t-container"
                          id="selectinput-13"
                        >
                          <span
                            class="css-1f43avz-a11yText-A11yText"
                            id="react-select-5-live-region"
                          />
                          <span
                            aria-atomic="false"
                            aria-live="polite"
                            aria-relevant="additions text"
                            class="css-1f43avz-a11yText-A11yText"
                            role="log"
                          />
                          <div
                            class="select-input__control css-13cymwt-control"
                          >
                            <div
                              class="select-input__value-container select-input__value-container--has-value css-hlgwow"
                            >
                              <div
                                class="select-input__single-value css-1dimb5e-singleValue"
                              >
                                Name
                              </div>
                              <div
                                class="select-input__input-container css-19bb58m"
                                data-value=""
                              >
                                <input
                                  aria-activedescendant=""
                                  aria-autocomplete="list"
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  autocapitalize="none"
                                  autocomplete="off"
                                  autocorrect="off"
                                  class="select-input__input"
                                  id="react-select-5-input"
                                  role="combobox"
                                  spellcheck="false"
                                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                  tabindex="0"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                            <div
                              class="select-input__indicators css-1wy0on6"
                            >
                              <span
                                class="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                              />
                              <div
                                aria-hidden="true"
                                class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="css-tj5bde-Svg"
                                  focusable="false"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                >
                                  <path
                                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                          <input
                            name="keyPropertyName"
                            type="hidden"
                            value="Name"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="dataset_data_row_element_show"
              >
                <div
                  class="checkbox"
                >
                  <label>
                    <input
                      id="keyPropertyManaged"
                      type="checkbox"
                    />
                    Let server manage fields to make entries unique
                  </label>
                </div>
              </div>
            </div>
            <div
              class="col-xs-12 col-md-2"
            >
              <button
                class="domain-field-float-right btn btn-default"
                type="button"
              >
                Advanced Settings
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Dataset Properties Panel New dataset 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="panel panel-default domain-form-panel lk-border-theme-light"
      >
        <div
          class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
          id="dataset-header-id"
        >
          <span
            class="domain-panel-status-icon"
          >
            <span
              class="fa fa-check-circle"
            />
          </span>
          <span
            class="domain-panel-title"
          >
            Dataset Properties
          </span>
          <span
            class="pull-right"
          >
            <span
              class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
            />
          </span>
        </div>
        <div
          class="collapse panel-collapse in"
        >
          <div
            class="panel-body"
          >
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-12"
              >
                <div
                  class="row"
                >
                  <div
                    class="col-xs-12"
                  >
                    <a
                      class="domain-field-float-right"
                      href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataset"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Learn more about designing datasets
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-xs-12 col-md-5"
              >
                <div
                  class="domain-field-section-heading"
                >
                  Basic Properties
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-4"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Name
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                       *
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <input
                      class="form-control"
                      id="name"
                      placeholder="Enter a name for this dataset"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="col-xs-1"
                  />
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-4"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Label
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <input
                      class="form-control"
                      id="label"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="col-xs-1"
                  />
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-4"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Description
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <textarea
                      class="form-control"
                      id="description"
                    />
                  </div>
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-4"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Category
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <div
                      class="select-input-container "
                    >
                      <div
                        class=""
                      >
                        <div
                          class="select-input css-b62m3t-container"
                          id="selectinput-3"
                        >
                          <span
                            class="css-1f43avz-a11yText-A11yText"
                            id="react-select-2-live-region"
                          />
                          <span
                            aria-atomic="false"
                            aria-live="polite"
                            aria-relevant="additions text"
                            class="css-1f43avz-a11yText-A11yText"
                            role="log"
                          />
                          <div
                            class="select-input__control css-13cymwt-control"
                          >
                            <div
                              class="select-input__value-container css-hlgwow"
                            >
                              <div
                                class="select-input__placeholder css-1jqq78o-placeholder"
                                id="react-select-2-placeholder"
                              >
                                Select dataset category
                              </div>
                              <div
                                class="select-input__input-container css-19bb58m"
                                data-value=""
                              >
                                <input
                                  aria-activedescendant=""
                                  aria-autocomplete="list"
                                  aria-describedby="react-select-2-placeholder"
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  autocapitalize="none"
                                  autocomplete="off"
                                  autocorrect="off"
                                  class="select-input__input"
                                  id="react-select-2-input"
                                  role="combobox"
                                  spellcheck="false"
                                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                  tabindex="0"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                            <div
                              class="select-input__indicators css-1wy0on6"
                            >
                              <span
                                class="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                              />
                              <div
                                aria-hidden="true"
                                class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="css-tj5bde-Svg"
                                  focusable="false"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                >
                                  <path
                                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                          <input
                            name="category"
                            type="hidden"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="col-xs-1"
                  />
                </div>
              </div>
              <div
                class="col-xs-12 col-md-5"
              >
                <div
                  class="domain-field-section-heading"
                >
                  Data Row Uniqueness
                  <div
                    class="overlay-trigger"
                  >
                    <span
                      class="label-help-target"
                    >
                      <span
                        class="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="dataset_data_row_uniqueness_container"
                >
                  <div
                    class="radio"
                  >
                    <label>
                      <input
                        name="dataRowSetting"
                        type="radio"
                        value="0"
                      />
                      Participants
                       only (demographic data)
                    </label>
                  </div>
                  <div
                    class="radio"
                  >
                    <label>
                      <input
                        checked=""
                        name="dataRowSetting"
                        type="radio"
                        value="1"
                      />
                      Participants
                       and 
                      visits
                    </label>
                  </div>
                  <div
                    class="radio"
                  >
                    <label>
                      <input
                        name="dataRowSetting"
                        type="radio"
                        value="2"
                      />
                      Participants
                      , 
                      visits
                      , and additional key field
                    </label>
                  </div>
                </div>
                <div
                  class="dataset_data_row_element_hide"
                >
                  <div
                    class="row margin-top"
                  >
                    <div
                      class="col-xs-5"
                    >
                      Additional Key 
                      <span
                        class="domain-no-wrap"
                      >
                        Field
                        <div
                          class="overlay-trigger"
                        >
                          <span
                            class="label-help-target"
                          >
                            <span
                              class="label-help-icon fa fa-question-circle"
                            />
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      class="col-xs-7"
                    >
                      <div
                        class="select-input-container "
                      >
                        <div
                          class=""
                        >
                          <div
                            class="select-input select-input--is-disabled css-3iigni-container"
                            id="selectinput-6"
                          >
                            <span
                              class="css-1f43avz-a11yText-A11yText"
                              id="react-select-3-live-region"
                            />
                            <span
                              aria-atomic="false"
                              aria-live="polite"
                              aria-relevant="additions text"
                              class="css-1f43avz-a11yText-A11yText"
                              role="log"
                            />
                            <div
                              aria-disabled="true"
                              class="select-input__control select-input__control--is-disabled css-1mgq1wa-control"
                            >
                              <div
                                class="select-input__value-container css-hlgwow"
                              >
                                <div
                                  class="select-input__placeholder css-pxd85q-placeholder"
                                  id="react-select-3-placeholder"
                                >
                                  Select...
                                </div>
                                <div
                                  class="select-input__input-container css-1mkvw8y"
                                  data-value=""
                                >
                                  <input
                                    aria-activedescendant=""
                                    aria-autocomplete="list"
                                    aria-describedby="react-select-3-placeholder"
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    autocapitalize="none"
                                    autocomplete="off"
                                    autocorrect="off"
                                    class="select-input__input"
                                    disabled=""
                                    id="react-select-3-input"
                                    role="combobox"
                                    spellcheck="false"
                                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                    tabindex="0"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                              <div
                                class="select-input__indicators css-1wy0on6"
                              >
                                <span
                                  class="select-input__indicator-separator css-894a34-indicatorSeparator"
                                />
                                <div
                                  aria-hidden="true"
                                  class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="css-tj5bde-Svg"
                                    focusable="false"
                                    height="20"
                                    viewBox="0 0 20 20"
                                    width="20"
                                  >
                                    <path
                                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                    />
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="dataset_data_row_element_hide"
                >
                  <div
                    class="checkbox"
                  >
                    <label>
                      <input
                        disabled=""
                        id="keyPropertyManaged"
                        type="checkbox"
                      />
                      Let server manage fields to make entries unique
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="col-xs-12 col-md-2"
              >
                <button
                  class="domain-field-float-right btn btn-default"
                  type="button"
                >
                  Advanced Settings
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip0"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip1"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip2"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip4"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip5"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="panel panel-default domain-form-panel lk-border-theme-light"
    >
      <div
        class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
        id="dataset-header-id"
      >
        <span
          class="domain-panel-status-icon"
        >
          <span
            class="fa fa-check-circle"
          />
        </span>
        <span
          class="domain-panel-title"
        >
          Dataset Properties
        </span>
        <span
          class="pull-right"
        >
          <span
            class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
          />
        </span>
      </div>
      <div
        class="collapse panel-collapse in"
      >
        <div
          class="panel-body"
        >
          <div
            class="row margin-bottom"
          >
            <div
              class="col-xs-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-xs-12"
                >
                  <a
                    class="domain-field-float-right"
                    href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataset"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about designing datasets
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-xs-12 col-md-5"
            >
              <div
                class="domain-field-section-heading"
              >
                Basic Properties
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-4"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Name
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                     *
                  </span>
                </div>
                <div
                  class="col-xs-7"
                >
                  <input
                    class="form-control"
                    id="name"
                    placeholder="Enter a name for this dataset"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="col-xs-1"
                />
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-4"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Label
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </span>
                </div>
                <div
                  class="col-xs-7"
                >
                  <input
                    class="form-control"
                    id="label"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="col-xs-1"
                />
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-4"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Description
                  </span>
                </div>
                <div
                  class="col-xs-7"
                >
                  <textarea
                    class="form-control"
                    id="description"
                  />
                </div>
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-4"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Category
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </span>
                </div>
                <div
                  class="col-xs-7"
                >
                  <div
                    class="select-input-container "
                  >
                    <div
                      class=""
                    >
                      <div
                        class="select-input css-b62m3t-container"
                        id="selectinput-3"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-2-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                          role="log"
                        />
                        <div
                          class="select-input__control css-13cymwt-control"
                        >
                          <div
                            class="select-input__value-container css-hlgwow"
                          >
                            <div
                              class="select-input__placeholder css-1jqq78o-placeholder"
                              id="react-select-2-placeholder"
                            >
                              Select dataset category
                            </div>
                            <div
                              class="select-input__input-container css-19bb58m"
                              data-value=""
                            >
                              <input
                                aria-activedescendant=""
                                aria-autocomplete="list"
                                aria-describedby="react-select-2-placeholder"
                                aria-expanded="false"
                                aria-haspopup="true"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="select-input__input"
                                id="react-select-2-input"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="select-input__indicators css-1wy0on6"
                          >
                            <span
                              class="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="category"
                          type="hidden"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="col-xs-1"
                />
              </div>
            </div>
            <div
              class="col-xs-12 col-md-5"
            >
              <div
                class="domain-field-section-heading"
              >
                Data Row Uniqueness
                <div
                  class="overlay-trigger"
                >
                  <span
                    class="label-help-target"
                  >
                    <span
                      class="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
              </div>
              <div
                class="dataset_data_row_uniqueness_container"
              >
                <div
                  class="radio"
                >
                  <label>
                    <input
                      name="dataRowSetting"
                      type="radio"
                      value="0"
                    />
                    Participants
                     only (demographic data)
                  </label>
                </div>
                <div
                  class="radio"
                >
                  <label>
                    <input
                      checked=""
                      name="dataRowSetting"
                      type="radio"
                      value="1"
                    />
                    Participants
                     and 
                    visits
                  </label>
                </div>
                <div
                  class="radio"
                >
                  <label>
                    <input
                      name="dataRowSetting"
                      type="radio"
                      value="2"
                    />
                    Participants
                    , 
                    visits
                    , and additional key field
                  </label>
                </div>
              </div>
              <div
                class="dataset_data_row_element_hide"
              >
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-5"
                  >
                    Additional Key 
                    <span
                      class="domain-no-wrap"
                    >
                      Field
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                    </span>
                  </div>
                  <div
                    class="col-xs-7"
                  >
                    <div
                      class="select-input-container "
                    >
                      <div
                        class=""
                      >
                        <div
                          class="select-input select-input--is-disabled css-3iigni-container"
                          id="selectinput-6"
                        >
                          <span
                            class="css-1f43avz-a11yText-A11yText"
                            id="react-select-3-live-region"
                          />
                          <span
                            aria-atomic="false"
                            aria-live="polite"
                            aria-relevant="additions text"
                            class="css-1f43avz-a11yText-A11yText"
                            role="log"
                          />
                          <div
                            aria-disabled="true"
                            class="select-input__control select-input__control--is-disabled css-1mgq1wa-control"
                          >
                            <div
                              class="select-input__value-container css-hlgwow"
                            >
                              <div
                                class="select-input__placeholder css-pxd85q-placeholder"
                                id="react-select-3-placeholder"
                              >
                                Select...
                              </div>
                              <div
                                class="select-input__input-container css-1mkvw8y"
                                data-value=""
                              >
                                <input
                                  aria-activedescendant=""
                                  aria-autocomplete="list"
                                  aria-describedby="react-select-3-placeholder"
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  autocapitalize="none"
                                  autocomplete="off"
                                  autocorrect="off"
                                  class="select-input__input"
                                  disabled=""
                                  id="react-select-3-input"
                                  role="combobox"
                                  spellcheck="false"
                                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                  tabindex="0"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                            <div
                              class="select-input__indicators css-1wy0on6"
                            >
                              <span
                                class="select-input__indicator-separator css-894a34-indicatorSeparator"
                              />
                              <div
                                aria-hidden="true"
                                class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="css-tj5bde-Svg"
                                  focusable="false"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                >
                                  <path
                                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="dataset_data_row_element_hide"
              >
                <div
                  class="checkbox"
                >
                  <label>
                    <input
                      disabled=""
                      id="keyPropertyManaged"
                      type="checkbox"
                    />
                    Let server manage fields to make entries unique
                  </label>
                </div>
              </div>
            </div>
            <div
              class="col-xs-12 col-md-2"
            >
              <button
                class="domain-field-float-right btn btn-default"
                type="button"
              >
                Advanced Settings
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
